[package]
name = "rust-api-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = {version = "1.21", features=["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
mongodb = "2.3"
